# openframe-oss-tenant

./: .doc-orchestrator-source-files.txt  .gitignore  CLAUDE.md  README-test.md  pom.xml  readme.test
.github/steps/helm-override/: action.yml
.github/steps/rust-setup/: action.yml
.github/steps/sign-macos-package/: action.yml
.github/workflows/: build.yml  changes.yml  matrix.yml  promote.yml  release.yml  test.yml
cli/: helm-values-example.yaml
cli/internal/cluster/: service.go
client/: Cargo.toml  Makefile
client/chat-client/: .env.example  index.html  package.json  tailwind.config.js
client/chat-client/src-tauri/: Cargo.toml  tauri.conf.json
client/chat-client/src-tauri/icons/: icon.icns
client/chat-client/src-tauri/src/: main.rs
client/scripts/: setup_dev_init_config.sh
client/src/: lib.rs  main.rs  service.rs  service_adapter.rs
client/src/clients/: auth_client.rs  (+1 more)
clients/client/: Cargo.toml
clients/openframe-chat/: .env.example  .npmrc  .tailwind.config.md  .vite.config.md  Makefile  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
clients/openframe-client/: Cargo.toml  Makefile
configs/base/: application.yml  openframe-authorization-server.yml  openframe-management.yml  openframe-stream.yml
docs/testing/: README.md
integrated-tools/fleetmdm/: Dockerfile
manifests/app-of-apps/: helm-values-example.yaml  values.yaml
manifests/apps/: values-dev.yaml  values-prod.yaml  values-qa.yaml  values-stage.yaml  values.yaml
openframe-e2e-tests/: pom.xml
scripts/: example-helm-values.yaml  manage-apps.sh
(+1250 files in other folders)
